java/java-tests/testData/inspection/explicitToImplicitClassMigration/beforeAnotherFile.java
<error descr="Class 'AnotherFileName' is public, should be declared in a file named 'AnotherFileName.java'">public class AnotherFileName</error> {
  public static void main(String[] args) {
    System.out.println("Hello, world!");
  }
}
